@@ -1,2 +1,2 @@
-<ul><li>Interested in speaking at Nagios World Conference 2014? Learn more and apply today at <a href="http://go.nagios.com/conference?utm_source=link&utm_medium=link&utm_content=conference2014&utm_campaign=Core%20Promo" target=_blank">go.nagios.com/conference</a>.</li><li>Improve your Nagios skillset with self-paced and instructor led <a href="http://www.nagios.com/services/training" target="_blank">training services</a>.
+<ul><li>Interested in speaking at Nagios World Conference 2014? Learn more and apply today at <a href="http://go.nagios.com/conference?utm_source=link&amp;utm_medium=link&amp;utm_content=conference2014&amp;utm_campaign=Core%20Promo" target="_blank">go.nagios.com/conference</a>.</li><li>Improve your Nagios skillset with self-paced and instructor led <a href="http://www.nagios.com/services/training" target="_blank">training services</a>.
 </li><li><a href="http://go.nagios.com/conference" target="_blank"><img style="margin-right: 10px; margin-bottom: 5px; float: left;" alt="Nagios World Conference 2013" src="http://assets.nagios.com/images/events/nagios-world-conference-2014-sidebar_promo.png" height="48" width="148" border="0"></a>Don't miss the <a href="http://go.nagios.com/conference" target="_blank">Nagios World Conference</a> October 13th-16th, 2014.  3 days of presentations, industry experts, networking opportunities, and more.  <a href="http://go.nagios.com/conference" target="_blank">Register today</a> before the conference fills up!</li></ul>
